--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.68"
 yew = "0.17.4"
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.19"
