--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ description = "HAB truck camper frontend user interface."
 crate-type = ["cdylib"]
 
 [dependencies]
+anyhow = "1.0.34"
 wasm-bindgen = "0.2.68"
 yew = "0.17.4"
 
