--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = "1.0.34"
+bincode = "1.3.1"
+chrono = { version = "0.4.0", features = ["serde"] }
+serde = { version = "1.0.118", features = ["derive"] }
 wasm-bindgen = "0.2.68"
 yew = "0.17.4"
 
