--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ description = "HAB truck camper frontend user interface."
 anyhow = "1.0.38"
 bincode = "1.3.2"
 chrono = { version = "0.4.19", features = ["serde"] }
+habprotocol = { git = "https://github.com/davidkern/habprotocol", branch="1.0.0" }
 serde = { version = "1.0.124", features = ["derive"] }
 wasm-bindgen = "0.2.71"
 yew = "0.17.4"
