--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        buildFeatures {
+            viewBinding true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
